# public/api-docs/swagger.yaml
@@ -5,7 +5,7 @@ info:
 # during dev, should point to your local machine
 host: travel-package-project.herokuapp.com
 # basePath prefixes all resource paths
-basePath: /api
+basePath: /
 #
 schemes:
   # tip: remove http to make production-grade
@@ -21,7 +21,7 @@ paths:
   /flight:
     x-swagger-router-controller: flight
     get:
-      description: get an array of all added flights, enter the city where you depart from, it will give u a lot of infomation where u can land
+      description: Get an array of all added flights, enter the city where you depart from, api provides airline, airline cost, departure_city, departure_date, destination_city, and its ticket cost
       #define the type of response for Success "200" and Error
       produces:
         - application/json
@@ -58,7 +58,7 @@ paths:
   /flight/{id}:
     x-swagger-router-controller: flight
     get:
-      description: returns flight information that was added to the database
+      description: Search for specific flight, its airline name, cost, departure city, departure date
       operationId: GetFlight
       produces:
         - application/json
@@ -82,7 +82,7 @@ paths:
   /restaurant:
     x-swagger-router-controller: restaurant
     get:
-      description: get an array of all added restaurants
+      description: Using Yelp npm package to search for an array of first 40 restaurants with an inputs of the departure city and a yelp rating. Restaurants are sorted in the order of view count from largest to smallest
       operationId: GetAllRestaurant
       produces:
         - application/json
@@ -168,7 +168,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
     post:
-      description: add user info
+      description: To register an new account, user needs to enter first_name, last_name, username, password and a unique token. The response object would includes an token for authentication purpose
       operationId: AddUser
       produces:
         - application/json
@@ -216,7 +216,7 @@ paths:
 
     patch:
       # define the parameters
-      description: updating an new user
+      description: update a sepecific user with inputs of first_name, last_name, username, and password, the return response will include id, username, first_name, and last_name
       operationId: UpdateUser
       produces:
         - application/json
@@ -242,7 +242,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
-      description: deleting a specific folder
+      description: deleting a specific user, it will return back a id, username, first_name, and last_name
       operationId: DeleteUser
       produces:
         - application/json
@@ -266,7 +266,7 @@ paths:
   /users/{id}/packages:
     x-swagger-router-controller: packages
     get:
-      description: getting all the packages from the user
+      description: Get a full package information of the specific user, the response object will have the following - package_id, user_id, airline, flight_id, flight_cost, restaurant_name, restaurant_id, restaurants_review, hotels_name, hotels_id, and hotels_cost
       operationId: GetAllPackagePerUser
       produces:
         - application/json
@@ -276,6 +276,11 @@ paths:
           description: the id that needs to get back
           required: true
           type: integer
+        - in: header
+          name: token
+          description: an authorization header
+          required: true
+          type: string
       responses:
         "200":
           description: Success
@@ -289,7 +294,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
     post:
-      description: adding new a package for the user
+      description: To add a package for the specific user, user needs to enter budget, departure_airport_name, destination_airport_name, destination_airport_name, departure_date
       operationId: PostUniquePackagePerUser
       produces:
         - application/json
@@ -315,122 +320,6 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-  # /users/{user_id}/packages/{package_id}:
-  #   x-swagger-router-controller: packages
-  #   get:
-  #     # define the parameters
-  #     description: getting a specific user package
-  #     operationId: GetUniquePackageUniqueUser
-  #     produces:
-  #       - application/json
-  #     parameters:
-  #       - name: body
-  #         in: body
-  #         description: adding an package to that user
-  #         required: true
-  #         schema:
-  #           $ref: "#/definitions/AddNewPackage"
-  #       - name: id
-  #         in: path
-  #         description: the id of the user
-  #         required: true
-  #         type: integer
-  #     responses:
-  #       "200":
-  #         description: Success
-  #         schema:
-  #           $ref: "#/definitions/PackageDetail"
-  #       default:
-  #         description: Error
-  #         schema:
-  #           $ref: "#/definitions/ErrorResponse"
-
-  # /users/{user_id}/packages/{package_id}:
-  #   x-swagger-router-controller: packages
-  #   get:
-  #     # define the parameters
-  #     description: getting a specific user package
-  #     operationId: GetUniquePackageUniqueUser
-  #     produces:
-  #       - application/json
-  #     parameters:
-  #       - name: user_id
-  #         description: loooking for specific user
-  #         type: integer
-  #         format: int64
-  #         in: path
-  #         required: true
-  #       - name: package_id
-  #         description: looking for specific package
-  #         type: integer
-  #         format: int64
-  #         in: path
-  #         required: true
-
-  #     responses:
-  #       "200":
-  #         description: Success
-  #         schema:
-  #           $ref: "#/definitions/PackageDetail"
-  #       default:
-  #         description: Error
-  #         schema:
-  #           $ref: "#/definitions/ErrorResponse"
-
-    # put:
-    #   # define the parameters
-    #   description: updating a new package
-    #   operationId: UpdateUniquePackageUniqueUser
-    #   produces:
-    #     - application/json
-    #   parameters:
-    #     - name: user_id
-    #       description: loooking for specific user
-    #       type: integer
-    #       format: int64
-    #       in: path
-    #       required: true
-    #     - name: package_id
-    #       description: looking for specific package
-    #       type: integer
-    #       format: int64
-    #       in: path
-    #       required: true
-    #     - name: body
-    #       description: this is what user want to update
-    #       in: body
-    #       required: true
-    #       schema:
-    #         $ref: "#/definitions/PackageDetail"
-    #   responses:
-    #     "200":
-    #       description: Success
-    #       schema:
-    #         $ref: "#/definitions/PackageDetail"
-    #     default:
-    #       description: Error
-    #       schema:
-    #         $ref: "#/definitions/ErrorResponse"
-    # delete:
-    #   # define the parameters
-    #   description: deleting a package
-    #   produces:
-    #     - application/json
-    #   operationId: DeleteUniquePackageUniqueUser
-    #   parameters:
-    #     - name: user_id
-    #       description: loooking for specific user
-    #       type: integer
-    #       format: int64
-    #       in: path
-    #       required: true
-    #     - name: package_id
-    #       description: looking for specific package
-    #       type: integer
-    #       format: int64
-    #       in: path
-    #       required: true
-
   /login:
     x-swagger-router-controller: login
     post:
@@ -455,16 +344,6 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-
-    #   responses:
-    #     "200":
-    #       description: Success
-    #       schema:
-    #         $ref: "#/definitions/PackageDetail"
-    #     default:
-    #       description: Error
-    #       schema:
-    #         $ref: "#/definitions/ErrorResponse"
 
 
   /swagger:
@@ -536,21 +415,30 @@ definitions:
   AddNewPackage:
     type: object
     required:
-      - budget
-      - user_id
+      - airfare
       - departure_airport_name
       - destination_airport_name
       - departure_date
+      - hotel_name
+      - city_name
     properties:
-      budget:
-        type: integer
-      user_id:
+      airfare:
+        description: enter the amount of allowed airfare, please enter an amount larger than your airfare; otherwise, it won't work. For instance, you can enter a big amount such 2000 dollars
         type: integer
       departure_airport_name:
+        description: enter the airport name such as "SFO" or "JFK"
         type: string
       destination_airport_name:
+        description: enter the airport name such as "SFO" or "JFK"
         type: string
       departure_date:
+        description: enter the date in 'yyyy-mm-dd' format
+        type: string
+      hotel_name:
+        description: enter the hotel name such as 'Hilton'
+        type: string
+      city_name:
+        description: enter the city name such as 'San Francisco'
         type: string
 
   PackageDetail:
@@ -643,18 +531,18 @@ definitions:
   AddUser:
     type: object
     required:
-      - password
       - first_name
       - last_name
       - username
+      - password
     properties:
-      password:
-        type: string
       first_name:
         type: string
       last_name:
         type: string
       username:
+        type: string
+      password:
         type: string
 
   updateUser:
@@ -730,6 +618,7 @@ definitions:
       - first_name
       - last_name
       - username
+      - token
 
     properties:
       id:
@@ -739,6 +628,8 @@ definitions:
       last_name:
         type: string
       username:
+        type: string
+      token:
         type: string
 
   ErrorResponse:
